--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Weronica Green"
-  avatar           : "500x300.png"
+  avatar           : "weronica.jpg.jpg"
   bio              : "Data Scientist @Metromile"
   location         : "San Francisco, CA"
   employer         :
