--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "weronica.png"
   bio              : "Data Scientist @Metromile"
   location         : "San Francisco, CA"
-  employer         :
+  employer         : "https://www.metromile.com/"
   pubmed           : 
   googlescholar    : 
   email            :
