--- a/_config.yml
+++ b/_config.yml
@@ -238,12 +238,12 @@ defaults:
       comment: true
   # _talks
   - scope:
-      path: ""
-      type: talks
+      path: #""
+      type: #talks
     values:
-      layout: talk
-      author_profile: true
-      share: true
+      layout: #talk
+      author_profile: #true
+      share: #true
 
 # Sass/SCSS
 sass:
