--- a/_config.yml
+++ b/_config.yml
@@ -82,9 +82,9 @@ analytics:
 author:
   name             : "Weronica Green"
   avatar           : "weronica.png"
-  bio              : "Data Scientist @Metromile"
+  bio              : "Data Scientist @Lemonade"
   location         : "San Francisco, CA"
-  employer         : #"https://www.metromile.com/"
+  employer         : #"https://www.lemonade.com/"
   pubmed           : 
   googlescholar    : 
   email            :
